Changes to API project

--- a/FileUploadApp.API/FileUploadApp.API.csproj
+++ b/FileUploadApp.API/FileUploadApp.API.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\FileUploadApp.Implementation\FileUploadApp.Implementation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
