Add functionality to keep target dir in config

--- a/FileUploadApp.API/appsettings.json
+++ b/FileUploadApp.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "FileSettings": {
-    "RelativeSaveDirectory": "..\\..\\..\\..\\UploadedFiles"
+    "RelativeSaveDirectory": "..\\UploadedFiles"
   }
 }
